# Hide-nPNG

./: .gitignore  LICENSE  MANIFEST.in  README.md  app.py  config.py  image_handler.py  main.py  pyproject.toml  report.tex  requirements.txt  setup.py  steganography.py  test_steganography.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: code-quality.yml  release.yml  tests.yml
templates/: index.html
